--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,6 @@
   "icons": {
     "38": "images/eye-38.png"
   },
-  "background": {
-    "scripts": [
-      "scripts/background.js"
-    ]
-  },
   "browser_action": {
     "default_icon": {
       "38": "images/eye-38.png"
@@ -38,5 +33,6 @@
     "storage",
     "http://*/*",
     "https://*/*"
-  ]
+  ],
+  "options_page": "options.html"
 }
